--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "async": "^3.2.0",
     "cookie-parser": "~1.4.4",
     "cookie-session": "^1.4.0",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "formidable": "^1.2.2",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "mariadb": "^2.5.1",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.4.16",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
