--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www",
+    "doc": "jsdoc -d doc . routes model"
   },
   "dependencies": {
     "async": "^3.2.0",
@@ -21,6 +22,7 @@
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
+    "jsdoc": "^3.6.6",
     "nodemon": "^2.0.6"
   }
 }
