--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cookie-session": "^1.4.0",
     "crypto": "^1.0.1",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "formidable": "^1.2.2",
     "hbs": "~4.0.4",
